--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ edition = "2018"
 [dependencies]
 surf = "2.1"
 tide = "0.16"
-async-std = "1.6"
+async-std = { version = "1.9", features = ["attributes"] }
 chrono = "0.4"
 serde = "1.0"
+serde_json = "1.0"
 log = "0.4"
 env_logger = "0.7"
 clap = "3.0.0-beta.2"
+sqlx = { version = "0.5", features = [ "sqlite", "runtime-async-std-native-tls" ] }
