--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ log = "0.4"
 env_logger = "0.7"
 clap = "3.0.0-beta.2"
 sqlx = { version = "0.5", features = [ "sqlite", "runtime-async-std-native-tls" ] }
+jsonwebtoken = "8.0.0-beta.0"
+openssl = "0.10"
+lazy_static = "1.4"
