--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ surf = "2.1"
 tide = "0.16"
 async-std = { version = "1.9", features = ["attributes"] }
 chrono = "0.4"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "0.4"
 env_logger = "0.7"
