--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 surf = "2.1"
 tide = "0.16"
 async-std = { version = "1.9", features = ["attributes"] }
+futures = "0.3"
 chrono = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
