Add basic parameter handling using jq

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,5 @@ rand = { version = "0.8", features = [ "getrandom" ]}
 hex = "0.4"
 bcrypt = "0.9"
 http-types = "2.10"
+jq-rs = "0.4"
+regex = "1.4"
