--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ futures = "0.3"
 chrono = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_with = "1.7"
 log = "0.4"
 env_logger = "0.7"
 clap = "3.0.0-beta.2"
