--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ surf = "2.2"
 tide = "0.16"
 async-std = { version = "1.9", features = ["attributes"] }
 futures = "0.3"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_with = "1.7"
