--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 surf = "2.2"
 tide = "0.16"
+tide-rustls = "0.3"
 async-std = { version = "1.9", features = ["attributes"] }
 futures = "0.3"
 chrono = { version = "0.4", features = ["serde"] }
