--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ log = "0.4"
 env_logger = "0.7"
 clap = "3.0.0-beta.2"
 sqlx = { version = "0.5", features = [ "sqlite", "runtime-async-std-native-tls", "chrono" ] }
+# pin core due to regression after 5.6 breaking query!()
+sqlx-core = "=0.5.5"
 jsonwebtoken = "8.0.0-beta.0"
 openssl = "0.10"
 lazy_static = "1.4"
