--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ serde_json = "1.0"
 serde_with = "1.7"
 log = "0.4"
 env_logger = "0.7"
-clap = "3.0.0-beta.2"
+clap = "=3.0.0-beta.2"
 sqlx = { version = "0.5", features = [ "sqlite", "runtime-async-std-native-tls", "chrono" ] }
 jsonwebtoken = "8.0.0-beta.0"
 openssl = "0.10"
