--- a/.gitea/workflows/nix.yaml
+++ b/.gitea/workflows/nix.yaml
@@ -9,3 +9,5 @@ jobs:
       - uses: actions/checkout@v3
       #- run: nix build .#docker
       - run: nix run .#dockerPush
+        env:
+          CI_PACKAGE_WRITE: ${{ secrets.CI_PACKAGE_WRITE }}
