build(deps): update sqlx from 0.5 to 0.7.0-alpha.3

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ serde_with = "3.0.0"
 log = "0.4"
 env_logger = "0.10.0"
 clap = { version = "4.3.4", features = [ "derive", "env" ] }
-sqlx = { version = "0.5", features = [ "sqlite", "runtime-async-std-native-tls", "chrono" ] }
+sqlx = { version = "0.7.0-alpha.3", features = [ "sqlite", "runtime-async-std-native-tls", "chrono" ] }
 jsonwebtoken = "8.0.0-beta.0"
 openssl = "0.10"
 lazy_static = "1.4"
