--- a/.gitea/workflows/nix.yaml
+++ b/.gitea/workflows/nix.yaml
@@ -2,7 +2,7 @@ name: libre oneroster
 on: [push]
 jobs:
   build:
-    if: github.ref_name != 'master'
+    if: github.ref_type == 'branch'
     runs-on: nix
     container:
       image: git.bgw.dev/bgw/nix-act:2.16.1
@@ -11,7 +11,7 @@ jobs:
       - run: nix build
 
   push:
-    if: github.ref_name == 'master'
+    if: github.ref_type == 'tag'
     runs-on: nix
     container:
       image: git.bgw.dev/bgw/nix-act:2.16.1
