--- a/.gitea/workflows/nix.yaml
+++ b/.gitea/workflows/nix.yaml
@@ -2,12 +2,13 @@ name: libre oneroster
 on: [push]
 jobs:
   build:
-    if: github.ref_type == 'branch'
+    if: github.ref_type != 'tag'
     runs-on: nix
     container:
       image: git.bgw.dev/bgw/nix-act:2.16.1
     steps:
       - uses: actions/checkout@v3
+      - run: echo ${{ github.ref_type }}
       - run: nix build
 
   push:
