--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,33 +1,33 @@
 [package]
 name = "libre-oneroster"
-version = "0.2.0"
+version = "0.2.2"
 authors = ["fffnite <bradley.whiteford@live.co.uk>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-surf = "2.2"
+surf = "2.3"
 tide = "0.16"
 tide-rustls = "0.3"
-async-std = { version = "1.9", features = ["attributes"] }
+async-std = { version = "1.13", features = ["attributes"] }
 futures = "0.3"
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde_with = "3.0.0"
+serde_with = "3.0"
 log = "0.4"
-env_logger = "0.10.0"
-clap = { version = "4.3.4", features = [ "derive", "env" ] }
-sqlx = { version = "0.7.0-alpha.3", features = [ "sqlite", "runtime-async-std-native-tls", "chrono" ] }
-jsonwebtoken = "8.0.0-beta.0"
+env_logger = "0.11"
+clap = { version = "4.5", features = [ "derive", "env" ] }
+sqlx = { version = "0.8", features = [ "sqlite", "runtime-async-std-native-tls", "chrono" ] }
+jsonwebtoken = "9.3"
 openssl = "0.10"
-lazy_static = "1.4"
-uuid = { version = "1.3.4", features = [ "v4" ] }
+lazy_static = "1.5"
+uuid = { version = "1.16", features = [ "v4" ] }
 rand = { version = "0.8", features = [ "getrandom" ]}
 hex = "0.4"
-bcrypt = "0.14"
-http-types = "2.10"
+http-types = "2.12"
 jq-rs = "0.4"
-regex = "1.5"
-tiberius = { version = "0.12.2", features = [ "sql-browser-async-std" ] }
+regex = "1.11"
+tiberius = { version = "0.12", features = [ "sql-browser-async-std" ] }
+bcrypt = "0.17.0"
